# composite_uk_imd

./: .env  .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile.dev  LICENCE.MD  LICENSE  Pipfile  docker-compose.yml  merge_indexes.py  notebook_helper.py  notebooks-readme.md  pyproject.toml  readme.html  readme.ipynb  readme.md  render.yaml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  initializeCommand  initializeCommand.cmd  initializeCommand.ps1  postCreateCommand
.github/workflow-templates/: build.yml  build_and_publish.yml
.github/workflows/: build_and_publish.yml  docker-image.yml  template_meta_test.yaml  test.yml
analysis/: GB_imd_E_breakdown.csv  GB_imd_S_breakdown.csv  GB_imd_W_breakdown.csv  UK_imd_E_breakdown.csv  UK_imd_N_breakdown.csv  UK_imd_S_breakdown.csv  UK_imd_W_breakdown.csv
composite_lookups/: imd_lsoa.json
country_indexes/: join_description.yaml
country_indexes/nimdm2017/: nimdm2017-soa.csv
country_indexes/simd2020/: SIMD+2020v2+-+indicators.xlsx  SIMD+2020v2+-+ranks.xlsx
country_indexes/wimd2019/: wimd-2019-index-and-domain-scores.csv
data/: join_description.yaml  la_labels.csv  label_desc.csv  parl25_labels.csv  pcon_labels.csv
docs/: Gemfile  _config.yml  data.json  index.md
gb_index/: GB_IMD_E.csv  GB_IMD_S.csv  GB_IMD_W.csv
notebooks/: example.ipynb  generate_con_2025_imd.ipynb  generate_con_imd.ipynb  generate_la_imd.ipynb  readme.ipynb  v1_error_analysis.ipynb
script/: server  setup  test  update-from-template
tests/: test_composite_uk_imd.py  test_template_data_repo.py
uk_index/: UK_IMD_E.csv  UK_IMD_N.csv  UK_IMD_S.csv  UK_IMD_W.csv
(+589 files in other folders)
